[tool.poetry]
name = "bruteproxy"
version = "0.0.1"
description = ""
authors = ["dadevel <dadevel@disroot.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mitmproxy = "^10.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
